# Tickr_App

./: .gitignore  CONTRIBUTING.md  FONT_LICENSES.md  HOW_TO_USE.md  HOW_TO_USE.txt  Install-Tickr.md  LICENSE  README.md  RELEASE.md  RELEASE.txt  package-lock.json  package.json
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
