[package]
name = "ambient_timer_widget"
version = "0.1.0"
description = "Minimal always-on-top timer widget"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "window-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
